Version 11.1.3
--------------

    * As much sorting as possible of original targets is now retained when they are passed
      into subcommands (most notably `plz run sequential`, but could be others too).
    * Fixed some duplicate flags on proto_library.


Version 11.1.2
--------------

    * Fix for go_library when asm_srcs are passed, in some cases build would fail
      with permissions errors.


Version 11.1.0
--------------

    * python_binary and python_test rules can now import binary modules directly
      via an import hook that dynamically extracts them as needed. Hence zip_safe is
      not needed in many cases it was previously.


Version 11.0.2
--------------

    * Several small fixes to please_maven correcting a few cases.


Version 11.0.1
--------------

    * Fixed a rare internal data race.
    * Added a warning for potential cases where one target outputs into a directory written
      by another target, which can cause subtle build failures.


Version 11.0.0
--------------

    * Now ships with a builtin parser engine so the .so's aren't necessary (although
      still included for now) and there's no requirement to have cffi or any Python
      version installed to run.
    * Interactive debugging for tests; passing `-d` to `plz test` or `plz cover`
      causes the test to break into an interactive debugger on failure. Currently only
      works on Python, C and C++ tests.
    * Altered priority of config files; `/etc/plzconfig` is now the lowest priority and
      there is an additional `~/.please/plzconfig` immediately after it.
    * Added --profile flag which selects a config profile, e.g. `--profile dev` will
      attempt to read `.plzconfig.dev` if it exists.
    * Added --version flag to `plz update` to force updating to a particular version,
      and --latest flag to always update to the latest.
    * parse.experimentaldir config property can now be repeated.